2015-04-25  Natalia Portillo  <claunia@claunia.com>

	* Interop/Apple/Interop.Apple.getattrlist.cs:
	  Implemented Mac OS X setattrlist(2).

2015-04-25  Natalia Portillo  <claunia@claunia.com>

	* Interop/Apple/Interop.Apple.getattrlist.cs:
	  Documents which platform function are we calling.

	* Interop/Apple/Interop.Apple.stat.cs:
	  Documented stat and stat64

	* Interop/Apple/Interop.Apple.uname.cs:
	* Interop/Linux/Interop.Linux.uname.cs:
	  Documented uname

2015-04-25  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Apple/Interop.Apple.types.cs:
	* Interop/Apple/Interop.Apple.getattrlist.cs:
	  Defined Mac OS X's getattrlist(2).

2015-02-12  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Tests/Interop.Linux.cs:
	* Interop/Linux/Interop.Linux.uname.cs:
	* Interop/Linux/Interop.Linux.Errors.cs:
	* Interop/Linux/Interop.Linux.Libraries.cs:
	  Added Linux libc, errno and uname.

2015-02-12  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Tests/Interop.Apple.cs:
	* Interop/Apple/Interop.Apple.uname.cs:
	  Added code for uname() in OS X

	* Tests/Interop.DetectOS.cs:
	  Only compile tests in DEBUG

2015-02-12  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Tests/Interop.Apple.cs:
	* Tests/Interop.DetectOS.cs:
	* Interop/Interop.DetectOS.cs:
	* Interop/Interop.PlatformID.cs:
	  Added code to detect real OS platform.

2015-02-12  Natalia Portillo  <claunia@claunia.com>

	* Interop/Apple/Interop.Apple.Errors.cs:
	  Added all errors defined by BSD layer of OS X.

	* Tests/Interop.Apple.cs:
	  Added tests for Apple's stat() and stat64()

	* packages.config:
	  Added NUnit to do tests.

	* Claunia.IO.csproj:
	  Added tests

	* Interop/Apple/Interop.Apple.stat.cs:
	  Mono calls stat with 32-bit inode, modify structure and add
	  stat64() call.

	* Interop/Apple/Interop.Apple.types.cs:
	  Pack structure, dunno if needed

2015-02-12  Natalia Portillo  <claunia@claunia.com>
