@@ -1,5 +1,12 @@
 2015-04-25  Natalia Portillo  <claunia@claunia.com>
 
+	* Claunia.IO.csproj:
+	* Interop/Apple/Interop.Apple.xattr.cs:
+	  Implemented Mac OS X getxattr(2), setxattr(2),
+	  removexattr(2) and listxattr(2).
+
+2015-04-25  Natalia Portillo  <claunia@claunia.com>
+
 	* Interop/Apple/Interop.Apple.getattrlist.cs:
 	  Implemented Mac OS X setattrlist(2).
 
